# DU_Perception_Apriltag_Triangulate

./: README.md
pinax_camera_model_jazzy/: README.md
pinax_camera_model_jazzy/defraction_map_finder/: CMakeLists.txt  package.xml
pinax_camera_model_jazzy/defraction_map_finder/include/defraction_map_finder/: MapFinder.hpp
pinax_camera_model_jazzy/defraction_map_finder/src/: CameraFactory.cc  MapFinder.cpp  defraction_map_finder.cpp  defraction_map_finder.cpp.bak
pinax_camera_model_jazzy/jir_image_remapper/: CMakeLists.txt  package.xml
pinax_camera_model_jazzy/jir_image_remapper/config/: camera_infra1.yaml  camera_infra2.yaml
pinax_camera_model_jazzy/jir_image_remapper/launch/: image_remapper.launch.py  mono_remapper.launch.py  stereo_remapper.launch.py
pinax_camera_model_jazzy/jir_image_remapper/src/: node.cpp
pinax_camera_model_jazzy/jir_rectification_remap_lib/: CMakeLists.txt  package.xml
pinax_camera_model_jazzy/jir_rectification_remap_lib/include/jir_rectification_remap_lib/: rectification_remapper.h
pinax_camera_model_jazzy/jir_rectification_remap_lib/src/: rectification_remapper.cpp
pinax_camera_model_jazzy/jir_refractive_image_geometry/: CMakeLists.txt  package.xml
pinax_camera_model_jazzy/jir_refractive_image_geometry/include/jir_refractive_image_geometry/: pinhole_camera_model.hpp  refracted_pinhole_camera_model.hpp  refraction_operations.hpp
pinax_camera_model_jazzy/jir_refractive_image_geometry_msgs/: CMakeLists.txt  package.xml
rov_vision/: CMakeLists.txt  package.xml
rov_vision/config/: apriltag.yaml  left_camera.yaml  right_camera.yaml  stereo_params.yaml
rov_vision/include/rov_vision/: stereo_triangulator.hpp
rov_vision/launch/: camera_info.launch.xml  uw_apriltag_triangulation_pipeline.launch.xml  uw_rs_apriltag_triangulation.launch.xml
rov_vision/src/: camera_info_publisher.cpp  stereo_triangulator.cpp
