<?xml version="1.0"?>
<package format="3">
  <name>defraction_map_finder</name>
  <version>0.0.0</version>
  <description>The defraction_map_finder package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="robotics@jacobs-university.de">Jacobs Robotics</maintainer>
  <maintainer email="13223071@mahasiswa.itb.ac.id">Yayat Nurhidayat</maintainer>


  <license>CC BY-NC-ND 4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>eigen</depend>
  <depend>libopencv-dev</depend>
  <depend>libboost-dev</depend>
  <depend>sensor_msgs</depend>
  <depend>jir_refractive_image_geometry</depend>
  <depend>jir_refractive_image_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
